fixed styling so that main view does not overlap with overview anymore

--- a/progtool/styles/styles.scss
+++ b/progtool/styles/styles.scss
@@ -38,6 +38,7 @@ $selection-foreground-color: #800;
   flex-direction: column;
   justify-content: start;
   align-items: center;
+  margin-left: $sidebar-width;
 
   #main-view {
     width: 100%;
